add book step 1
