# app/backend/src/Controller/ApiController.php
@@ -2,6 +2,8 @@
 
 namespace App\Controller;
 
+use App\Entity\Genre;
+use Doctrine\ORM\EntityManagerInterface;
 use Symfony\Bundle\FrameworkBundle\Controller\AbstractController;
 use Symfony\Component\HttpFoundation\JsonResponse;
 use Symfony\Component\Routing\Attribute\Route;
@@ -9,9 +11,22 @@ use Symfony\Component\Routing\Attribute\Route;
 class ApiController extends AbstractController
 {
     #[Route('/api/get_info', name: 'app_api')]
-    public function index(): JsonResponse
+    public function index(EntityManagerInterface $entityManager): JsonResponse
     {
+        return new JsonResponse($this->prepare($entityManager));
+    }
 
-        return new JsonResponse(['success' => true]);
+    private function prepare(EntityManagerInterface $entityManager): array
+    {
+        $repository = $entityManager->getRepository(Genre::class);
+        $genres = $repository->findAll();
+        $info = [];
+
+        /** @var Genre $genre */
+        foreach ($genres as $genre) {
+            $info['genre'][$genre->getId()] = $genre->getName();
+        }
+
+        return $info;
     }
 }
