# app/backend/src/Controller/GenreController.php
@@ -11,18 +11,15 @@ use Symfony\Component\HttpFoundation\Request;
 
 class GenreController extends AbstractController
 {
-    #[Route('/api/genre/add', name: 'app_genre')]
-    public function index(Request $request, EntityManagerInterface $entityManager): JsonResponse
+    #[Route('/api/genre/create', name: 'app_genre')]
+    public function create(Request $request, EntityManagerInterface $entityManager): JsonResponse
     {
         $name = $request->request->get('name');
-        $entity = new Genre();
-        $entity->setName($name);
-
         $repository = $entityManager->getRepository(Genre::class);
         $genres = $repository->findOneBy(['name' => $name]);
 
         if (empty($genres)) {
-            $entityManager->persist($entity);
+            $entityManager->persist( new Genre($name));
             $entityManager->flush();
         }
 
